--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>hola mundo</title>
-	<link rel="stylesheet" type="text/css" href="gindex.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<h1>hola</h1>
